--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Genius Hub IA</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <!-- O index.css agora é importado via JavaScript (index.tsx) -->
-<script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.1.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
-    "react/": "https://esm.sh/react@^19.1.0/",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.50.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.8.0",
-    "vite": "https://esm.sh/vite@^7.0.3",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.6.0"
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Genius Hub IA</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+
+  <script type="importmap">
+  {
+    "imports": {
+      "react": "https://esm.sh/react@^19.1.0",
+      "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
+      "react/": "https://esm.sh/react@^19.1.0/",
+      "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.50.3",
+      "@google/genai": "https://esm.sh/@google/genai@^1.8.0",
+      "vite": "https://esm.sh/vite@^7.0.3",
+      "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^4.6.0"
+    }
   }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
+  </script>
+
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
-<script type="module" src="/index.tsx"></script>
+  <div id="root"></div>
+  <script type="module" src="./src/index.tsx"></script>
 </body>
 </html>
